Use new vital iterator_range instead of boost

--- a/vital/range/tests/CMakeLists.txt
+++ b/vital/range/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set( test_libraries )
 # Range tests
 ##############################
 
+kwiver_discover_gtests(vital iterator_range     LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital range_filter       LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital range_indirect     LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital range_iota         LIBRARIES ${test_libraries})
