--- a/vital/util/tests/CMakeLists.txt
+++ b/vital/util/tests/CMakeLists.txt
@@ -17,3 +17,4 @@ kwiver_discover_gtests(vital string_editor      LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital thread_pool        LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital timer              LIBRARIES ${test_libraries})
 kwiver_discover_gtests(vital token_expander     LIBRARIES ${test_libraries})
+kwiver_discover_gtests(vital visit              LIBRARIES ${test_libraries})
