--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set( test_libraries kwiver_algo_core kwiver_algo_klv vital )
 
 kwiver_discover_gtests( klv klv_blob            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_checksum        LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_demuxer         LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_read_write      LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0104            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_0601            LIBRARIES ${test_libraries} )
