--- a/config/applets/dump_klv.conf
+++ b/config/applets/dump_klv.conf
@@ -4,3 +4,5 @@ video_reader:type = ffmpeg
 video_reader:vidl_ffmpeg:time_source = misp
 
 metadata_serializer:type = json
+
+image_writer:type = ocv
