--- a/arrows/ffmpeg/CMakeLists.txt
+++ b/arrows/ffmpeg/CMakeLists.txt
@@ -20,6 +20,7 @@ endif()
 set(ffmpeg_headers_public
   ffmpeg_init.h
   ffmpeg_video_input.h
+  ffmpeg_video_settings.h
   )
 
 kwiver_install_headers(
@@ -35,6 +36,7 @@ kwiver_install_headers(
 set(ffmpeg_sources
   ffmpeg_init.cxx
   ffmpeg_video_input.cxx
+  ffmpeg_video_settings.cxx
   )
 
 kwiver_add_library( kwiver_algo_ffmpeg
