--- a/arrows/klv/tests/CMakeLists.txt
+++ b/arrows/klv/tests/CMakeLists.txt
@@ -23,5 +23,6 @@ kwiver_discover_gtests( klv klv_0903            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1010            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1108_metric_set LIBRARIES ${test_libraries} )
+kwiver_discover_gtests( klv klv_1202            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1206            LIBRARIES ${test_libraries} )
 kwiver_discover_gtests( klv klv_1303            LIBRARIES ${test_libraries} )
